--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,35 @@
+baseurl: ""
+url: "http://yourdomain.com"
+
+# Build settings
+markdown: kramdown
+
+
 # Dependencies
 markdown:         redcarpet
 highlighter:         true
 
 # Permalinks
-permalink:        pretty
+permalink: /blog/:year/:month/:day/:title
 
 # Setup
 title:            Thought Box
 tagline:          'A random walk'
 description:      'Life on the Pareto Frontier'
-url:              http://blog.jnbrymn.com
-baseurl:          /
+# url:              http://blog.jnbrymn.com
+# baseurl:          / #prolly can't use this
 
-author:
-  name:           'John Berryman'
-  url:            https://twitter.com/JnBrymn
+# author:
+#   name:           'John Berryman'
+#   url:            https://twitter.com/JnBrymn
 
 paginate:         5
 
-# Custom vars
-version:          2.1.0
+# # Custom vars
+# version:          2.1.0
 
-github:
-  repo:           https://github.com/JnBrymn/
+# github:
+#   repo:           https://github.com/JnBrymn/
 
-exclude:
-  - _drafts/hidden
+# exclude:
+#   - _drafts/hidden
