--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ markdown: kramdown
 
 
 # Dependencies
-highlighter:         true
+highlighter:         rouge
 
 # Permalinks
 permalink: /blog/:year/:month/:day/:title
